# proxycurl-py-linkedin-profile-scraper

./: .gitignore  README.md  generator  pyproject.toml  sample.csv  setup.py
codegen/: generator
codegen/templates/: api_mapping.json  asyncio.py  check_mapping.py  gevent.py  linkedin_mapping.json  response_model.py  twisted.py
examples/: lib-asyncio.py  lib-gevent.py  lib-twisted.py
proxycurl/: config.py  models.py
proxycurl/asyncio/: base.py  library.py
proxycurl/gevent/: __init__.py  base.py  library.py
proxycurl/twisted/: base.py  library.py
proxycurl_py/gevent/: base.py
tests/: test_proxycurl.py
