[tool.poetry]
name = "proxycurl-py"
version = "0.1.0.post1"
description = ""
authors = ["Nubela <tech@nubela.co>"]
packages = [
    { include = "proxycurl_py" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

gevent = { version = "^22.10.2", optional = true }
requests = { version = "^2.25.0", optional = true }
aiohttp = { version = "^3.7.4", optional = true }
Twisted = { version = "^21.7.0", optional = true }
treq = { version = "^21.5.0", optional = true }

[tool.poetry.extras]
gevent = ["gevent", "requests"]
asyncio = ["aiohttp"]
twisted = ["Twisted", "treq"]

[tool.poetry.dev-dependencies]
Jinja2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
